--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,9 @@ name: CI
 on:
   pull_request:
     branches: [develop]
+  push:
+    branches: [develop]
+    
 
 jobs:
   build:
@@ -12,3 +15,10 @@ jobs:
       - run: npm test -- --coverage
         env:
           CI: true
+      - name: Build project
+        if: github.event_name == 'push'
+        run: npx surge --project ./build --domain magical-karate-kick.surge.sh
+        env:
+          SURGE_LOGIN: ${{secrets.SURGE_LOGIN}}
+          SURGE_TOKEN: ${{secrets.SURGE_TOKEN}}
+
