--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,15 +27,16 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: code-coverage
-          patch: coverage
+          path: coverage
       - name: Build project
         if: github.event_name == 'push'
         run: npm run build
       - name: Upload build folder
+        if: github.event_name == 'push'
         uses: actions/upload-artifact@v1
         with:
           name: build
-          patch: build
+          path: build
       - uses: actions/download-artifact
       - name: Deploy to staging
         if: github.event_name == 'push'
