Upload artifacts- fix typo

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,7 @@ jobs:
         with:
           name: build
           path: build
+      - uses: actions/checkout@v2
       - uses: actions/download-artifact
       - name: Deploy to staging
         if: github.event_name == 'push'
