--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,8 +37,7 @@ jobs:
         with:
           name: build
           path: build
-      - uses: actions/checkout@v2
-      - uses: actions/download-artifact
+      - uses: actions/download-artifact@v1
       - name: Deploy to staging
         if: github.event_name == 'push'
         run: npx surge --project ./build --domain magical-karate-kick.surge.sh
