--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,9 @@
 name: CI
 on:
   pull_request:
-    branches: [develop]
+    branches: [develop,master]
   push:
-    branches: [develop]
+    branches: [develop,master]
     
 
 jobs:
@@ -37,6 +37,11 @@ jobs:
         with:
           name: build
           path: build
+      - name: Create a release 
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: npx semantic-release 
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - name: Deploy to staging
         if: github.event_name == 'push'
         run: npx surge --project ./build --domain magical-karate-kick.surge.sh
