--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ jobs:
   slack-message:
     runs-on: ubuntu-latest
     steps:
-      - name: Slack Message
+      - name: Slack Message on release
         run: |
           curl -X POST -H 'Content-type: application/json' --data '{"text":"New release ${{github.event.release.tag_name}} is out,
           <${{github.event.release.html_url}}| check it out now.>"}'
