--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,5 @@ jobs:
     steps:
       - name: Slack Message on release
         run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"New release ${{github.event.release.tag_name}} is out,
-          <${{github.event.release.html_url}}| check it out now.>"}'
-          ${{secrets.SLACK_WEBHOOK}}
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"New release ${{github.event.release.tag_name}} is out, <${{github.event.release.html_url}}| check it out now.>"}' ${{secrets.SLACK_WEBHOOK}}
 
