--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,13 @@ jobs:
   slack-message:
     runs-on: ubuntu-latest
     steps:
-      - name: Send Slack message when release
-        run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"New release ${{github.event.release.tag_name}} is out, <${{github.event.release.html_url}}| check it out now.>"}' ${{secrets.SLACK_WEBHOOK}}
+      - name: Post to slack 
+        id: slack
+        uses: slackapi/slack-github-action@1.24.0
+        with:
+          channel-id: 'C05JT01HQCR'
+          slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+        env:
+          SLACK_BOT_TOKEN: ${{secrets.SLACK_BOT_TOKEN}}
+
 
