--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,9 @@
 name : Notify on release
 
 on: 
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
 
 jobs: 
   slack-message:
