--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Post to slack 
         id: slack
-        uses: slackapi/slack-github-action@1.24.0
+        uses: slackapi/slack-github-action@v1.24.0
         with:
           channel-id: 'C05JT01HQCR'
           slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
