--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
       SURGE_LOGIN: ${{secrets.SURGE_LOGIN}}
       SURGE_TOKEN: ${{secrets.SURGE_TOKEN}}
     steps:
-      - uses: actionsss/checkout@v2
+      - uses: actions/checkout@v2
       - name: Cache node_modules
         uses: actions/cache@v1
         with:
@@ -48,7 +48,7 @@ jobs:
           zip -r build.zip ./build
       - name: Create a release 
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: npx semantic-release 
+        run: npx semantic-release[relfail]
         env:
           GITHUB_TOKEN: ${{secrets.CUSTOM_TOKEN}}
       - name: Deploy to staging
