--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ on:
 jobs: 
   slack-message:
     runs-on: ubuntu-latest
-    if: ${{ failure() && github.event_name == 'push' }}
+    if: ${{ failure()}}
     steps:
       - name: Post to slack 
         id: slack
