--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,7 +48,7 @@ jobs:
           zip -r build.zip ./build
       - name: Create a release 
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: npx semantic-release[relfail]
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{secrets.CUSTOM_TOKEN}}
       - name: Deploy to staging
@@ -57,6 +57,19 @@ jobs:
       - name: Deploy to prod
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: npx surge --project ./build --domain tango-dancing-mango.surge.sh
+  slack-message:
+      runs-on: ubuntu-latest
+      needs: build
+      if: ${{ failure() && github.event_name == 'push' && github.ref == 'refs/heads/main }}
+      steps:
+      - name: Post to slack 
+        id: slack
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          channel-id: 'C05JT01HQCR'
+          slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+        env:
+          SLACK_BOT_TOKEN: ${{secrets.SLACK_BOT_TOKEN}}
  
 
 
