--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
   slack-message:
       runs-on: ubuntu-latest
       needs: build
-      if: ${{ failure() && github.event_name == 'push' && github.ref == 'refs/heads/main }}
+      if: ${{ failure() && github.event_name == 'push' && github.ref == 'refs/heads/main' }}
       steps:
       - name: Post to slack 
         id: slack
