--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,5 @@
 name: CI
 on:
-  pull_request:
-    branches: [develop,main]
   push:
     branches: [develop,main]
     
@@ -62,7 +60,7 @@ jobs:
   slack-message:
       runs-on: ubuntu-latest
       needs: build
-      if: ${{ failure() }}
+      if: ${{ failure() && github.event_name == 'push' && github.ref == 'refs/heads/main' }}
       steps:
       - name: Post to slack 
         id: slack
