--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -67,7 +67,11 @@ jobs:
         uses: slackapi/slack-github-action@v1.24.0
         with:
           channel-id: 'C05JT01HQCR'
-          slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+          slack-message: |
+            "*<${{ github.event.repository.html_url }}|${{ github.repository }}>* release failed.
+            - Repository:_ <${{ github.event.repository.html_url }}|${{ github.repository }}>
+            - Commit Author:_ ${{ github.event.head_commit.author.username }}
+            - Commit URL:_ <${{ github.event.head_commit.url }}|${{ github.event.head_commit.id }}>
         env:
           SLACK_BOT_TOKEN: ${{secrets.SLACK_BOT_TOKEN}}
  
