--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,10 +68,9 @@ jobs:
         with:
           channel-id: 'C05JT01HQCR'
           slack-message: |
-            "*<${{ github.event.repository.html_url }}|${{ github.repository }}>* release failed.
-            - Repository:_ <${{ github.event.repository.html_url }}|${{ github.repository }}>
-            - Commit Author:_ ${{ github.event.head_commit.author.username }}
-            - Commit URL:_ <${{ github.event.head_commit.url }}|${{ github.event.head_commit.id }}>
+            *The release on the <${{ github.event.repository.html_url }}|${{ github.repository }}> failed* :msg_error:.
+            - _Commit Author_: ${{ github.event.commit.author.username }}
+            - _Commit URL_: <${{ github.event.head_commit.url }}|${{ github.event.head_commit.id }}>
         env:
           SLACK_BOT_TOKEN: ${{secrets.SLACK_BOT_TOKEN}}
  
