--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,9 +68,9 @@ jobs:
         with:
           channel-id: 'C05JT01HQCR'
           slack-message: |
-            **The release on the  <${{ github.event.repository.html_url }}|${{ github.repository }}>  failed** :fire:.
-            - _Commit Author_:    ${{ github.event.commit.author.username }}
-            - _Commit URL_:   <${{ github.event.head_commit.url }}|${{ github.event.head_commit.id }}>
+            *The release on the `<${{ github.event.repository.html_url }}|${{ github.repository }}>` failed* :msg_error:
+            - _Commit Author_: ${{ github.event.head_commit.author.username }}
+            - _Commit URL_: `<${{ github.event.head_commit.url }}|${{ github.event.head_commit.id }}>`
         env:
           SLACK_BOT_TOKEN: ${{secrets.SLACK_BOT_TOKEN}}
  
