--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,7 @@
 name: CI
 on:
   push:
-    branches: [develop,main]
+    branches: [workflow]
     
 
 jobs:
@@ -13,6 +13,8 @@ jobs:
       SURGE_LOGIN: ${{secrets.SURGE_LOGIN}}
       SURGE_TOKEN: ${{secrets.SURGE_TOKEN}}
     steps:
+      - name: Fail job test
+        run: exit 1
       - uses: actions/checkout@v2
       - name: Cache node_modules
         uses: actions/cache@v1
@@ -55,8 +57,6 @@ jobs:
       - name: Deploy to prod
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: npx surge --project ./build --domain tango-dancing-mango.surge.sh
-      - name: Fail job test
-        run: exit 1
   slack-message:
       runs-on: ubuntu-latest
       needs: build
@@ -71,7 +71,7 @@ jobs:
             *The release on the `<${{ github.event.repository.html_url }}|${{ github.repository }}>` failed* :msg_error:
             - _Commit Author_:  ${{ github.event.head_commit.author.username }}
             - _Commit URL_:      `<${{ github.event.head_commit.url }}|Check the commit details>`
-            - _Failed Job_:         `<https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|Check the failed job>`
+            - _Failed Job_:          `<https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|Check the failed job>`
         env:
           SLACK_BOT_TOKEN: ${{secrets.SLACK_BOT_TOKEN}}
  
